fix: overflow & tooltip visibility

--- a/src/components/GameWindow/MiddleContent/Character.module.css
+++ b/src/components/GameWindow/MiddleContent/Character.module.css
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  overflow: visible;
 }
 
 .enemy {
@@ -33,21 +34,34 @@
 }
 
 .character:has(.turn) .container {
+  transition: 0.3s ease-in;
+  width: 50%; 
+  height: 100%; 
+  overflow: visible;
+  opacity: 1;}
+
+.character:has(.highlighted) .container {
+  transition: 0.3s ease-in;
+  width: 50%; 
+  height: 100%; 
+  overflow: visible;
+  opacity: 1;}
+
+.character:has(.turn) .container {
   width: 50%;
 }
 
-.character:has(.highlighted) .container {
-  width: 50%;
-}
 
 
 .character .container {
   position: absolute; 
   top: 0rem;
   width: 0%; 
-  height: 100%; 
+  height: 50%; 
   overflow: hidden;
-  transition: width 0.3s ease;
+  /* transition: width 3s ease; */
+  opacity: 0;
+
 }
 
 .heroContainer {
@@ -59,14 +73,42 @@
 }
 
 .character:hover .container {
+  transition: 0.3s ease-in;
   width: 50%; 
+  height: 100%; 
   overflow: visible;
+  opacity: 1; 
 }
+
+.container .statusEffects {
+  display: flex;
+  gap: 0.5rem;
+  margin: 0;
+  opacity: 0;
+  margin-top: -2rem;
+} 
+
+.character:hover .container .statusEffects {
+  transition: 1s;
+  opacity: 1;
+}
+
+.container .statusEffects .effect {
+  height: 1.5rem;
+  width: 1.5rem;
+  background-color: #ad0505; 
+  cursor: pointer; 
+}
+
+.character:hover .container .statusEffects .effect {
+  transition: 0.6s;
+  opacity: 1;
+}
+
 
 .character .container .name {
   font-size: 0.8rem;
   font-weight: 600;
-  margin: 0;
 }
 
 .enemyName {
@@ -120,24 +162,11 @@
   transition: all 0.1s ease-out;
 }
 
-
-.statusEffects {
-  margin: 0;
-  margin-top: -2rem;
-} 
-
-.effect {
-  height: 1.5rem;
-  width: 1.5rem;
-  background-color: #ad0505; 
-  cursor: pointer; 
-}
-
 .health {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   height: 100%;
   gap: 1rem;
-  margin-top: -0.9rem;
+  margin-top: -1.2rem;
 }
